# jq-cmake

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile  README.md
patch/: dlfcn.h
src/: builtin.c  jv_dtoa.c  util.c  version.h
